Closed Bug 346492 Opened 18 years ago Closed 18 years ago

Preferences toolbar state (icons and text, icons only, etc) not remembered across launches

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: froodian, Assigned: froodian)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

1.37 KB, patch
stuart.morgan+bugzilla
: review+
mikepinkerton
: superreview+
Details | Diff | Splinter Review
We turn off the contextual menu for the prefs toolbar, but we leave on the toolbar widget.  Resizing the toolbar icons is extremely useful for people who use the (increasing number of) 3rd party prefpanes, since it allows all prefpanes to be seen without an overflow.  Users can do this by cmd-clicking the toolbar widget, but this state isn't remembered across launches.

1. Cmd-,
2. Cmd-click the toolbar widget in the upper-right corner of the window
3. Relaunch camino
4. Cmd-,

What happens: toolbar buttons are back to big icons and text
What should happen: state should be remembered
Attached patch PatchSplinter Review
And yes, it'll still set it to icons and text by default, even if we don't explicitly set it (the same way that it currently sets it to "large" even though we don't explicitly set it).
Assignee: nobody → stridey
Status: NEW → ASSIGNED
Attachment #231872 - Flags: review?(stuart.morgan)
Comment on attachment 231872 [details] [diff] [review]
Patch

r=me
Attachment #231872 - Flags: superreview?(mikepinkerton)
Attachment #231872 - Flags: review?(stuart.morgan)
Attachment #231872 - Flags: review+
Comment on attachment 231872 [details] [diff] [review]
Patch

sr=pink
Attachment #231872 - Flags: superreview?(mikepinkerton) → superreview+
landed trunk and branch
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: