prefs toolbar state not remembered on restart (bug 346492)